FIX | Add media query to hide notes panel on mobile devices

--- a/public/styles/pages/verification/verification.css
+++ b/public/styles/pages/verification/verification.css
@@ -60,4 +60,10 @@
 #month-brief #total-income {
   color: #308d05;
   font-weight: bold;
-}/*# sourceMappingURL=verification.css.map */
+}
+
+@media all and (max-width: 767px) {
+  #notes-pannel {
+    display: none;
+  }
+}
